After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726897 - City search/match not localized
City search/match not localized
Status: RESOLVED FIXED
Product: gnome-weather
Classification: Applications
Component: general
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Weather Maintainer(s)
GNOME Weather Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-03-22 20:51 UTC by Janssen
Modified: 2014-06-15 13:45 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Janssen 2014-03-22 20:51:48 UTC
The new-city-search-field only matches against the English name not the localized local name

Example: Nürnberg, Germany

N -> too many hits 
Nü -> none
Nu -> many hits, Nürnberg is 3rd suggestion
Nue -> none (ue is a common replacement for the umlaut ü)
Nur -> Nürnberg only suggestion
Nurn -> none 
Nure -> Nürnberg

It only matches against “Nuremberg“ not “Nürnberg“
Comment 1 Giovanni Campagna 2014-06-15 13:45:09 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.