gweather-location: fix localization of matches in the location entry

We need to keep both the English and the local variant of the sort
name in the location and in the model, to be able to match on both.

https://bugzilla.gnome.org/show_bug.cgi?id=726897